# GCFD

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  alcfd.cpp  alcfd.h  main.cpp
data/: abalone.csv  example-cleaned.csv  example-dirty.csv
data/cfds/: Soccer_10cfds.txt  Soccer_3cfds.txt  Soccer_5cfds.txt  abalone_10cfds.txt  abalone_3cfds.txt  abalone_5cfds.txt  adult_10cfds.txt  adult_3cfds.txt  adult_5cfds.txt  example_1cfds.txt  sp500_10cfds.txt  sp500_3cfds.txt  sp500_5cfds.txt
data/dirtysets/: 0.0487.csv  abalone_10cfds_01pct.csv  abalone_10cfds_05pct.csv  abalone_10cfds_1pct.csv  abalone_10cfds_1pct_detectable.csv  abalone_3cfds_01pct.csv  abalone_3cfds_05pct.csv  abalone_3cfds_1pct.csv  abalone_3cfds_3pct.csv  abalone_3cfds_3pct_detectable.csv  abalone_5cfds_01pct.csv  abalone_5cfds_05pct.csv  abalone_5cfds_1pct.csv  abalone_5cfds_2pct.csv  abalone_5cfds_2pct_detectable.csv
libs/: CFDMeasure.cpp  CFDMeasure.h  CFDMeasure_2.cpp  CFDMeasure_2.h  init_sampling.cpp  init_sampling.h  predicate.cpp  predicate.h  predicates_space.cpp  predicates_space.h  processing.cpp  processing.h  re_sampling.cpp  re_sampling.h  record.cpp  record.h  rule.cpp  rule.h  tuple_pair.cpp  tuple_pair.h  using_name.h  using_name_sp.h
results/abalone_10cfds_01pct/: all_lst_tp.txt  (+6 more)
srcs/: CFDMeasure.cpp  CFDMeasure.h  CFDMeasure_2.cpp  CFDMeasure_2.h  init_sampling.cpp  init_sampling.h  predicate.h  predicates_space.h  processing.cpp  processing.h  re_sampling.cpp  re_sampling.h  record.cpp  record.h  rule.cpp  rule.h  tuple_pair.cpp  tuple_pair.h  using_name.h  using_name_sp.h
(+52 files in other folders)
